added hidden link for teaser

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
   <div class="container diamond">
     <div class="row">
-      <div id="diamond-narrow"></div>
+      <a href="https://youtu.be/hFNvc3WiZYw"><div id="diamond-narrow"></div></a>
     </div>
   </div>
 
