apparently bojack has a capital j

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Bojack Horseman Season 3</h1>
+    <h1>BoJack Horseman Season 3</h1>
       <div id="clockdiv">
         <div>
           <span class="days"></span>
@@ -31,10 +31,6 @@
       <a href="https://youtu.be/hFNvc3WiZYw"><div id="diamond-narrow"></div></a>
     </div>
   </div>
-
-
-
-
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
