--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Bojack Horseman Season 3</h1>
+    <h1>BoJack Horseman Season 3</h1>
       <div id="clockdiv">
         <div>
           <span class="days"></span>
