--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <span class="seconds"></span>
           <div class="smalltext">Seconds</div>
         </div>
+        <div>
+          <span class='test'></span>
+          <div class='smalltext'></div>
+        </div>
       </div>
 
     <div class="container diamond">
