--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div>
           <span class='test'></span>
-          <div class='smalltext'></div>
+          <div class='smalltext'>Test</div>
         </div>
       </div>
 
