--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <span class="seconds"></span>
           <div class="smalltext">Seconds</div>
         </div>
-        <div>
+        <!-- <div>
           <span class='test'></span>
           <div class='smalltext'>Test</div>
-        </div>
+        </div> -->
       </div>
 
     <div class="container diamond">
