--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a class="link" href="https://amp.twimg.com/v/e4e14c43-6139-43e4-9e64-509e7703294c"><h1>BoJack Season 3</h1></a>
+    <a href="https://amp.twimg.com/v/e4e14c43-6139-43e4-9e64-509e7703294c"><h1>BoJack Season 3</h1></a>
       <div id="clockdiv">
         <div>
           <span class="days"></span>
